welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: type int
  var T:int=nums.length()
        ^noTriples:2: error: Int does not take parameters
  var T:int=nums.length()
                       ^