welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  var T:int=nums.length()
  for (i <- 0 to T){
    var u = nums(i)
    if (nums(i+1)==u && nums(i+2)==u){
      return false
    }
      
     
  }
  // pas de triplet, on retourne true
  	return true
}